# nnlib

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  nn.cpp  nn.hpp  run.sh  xor_gate.cpp
